Fix: post-thumbnail is now vertical aligned

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -16524,7 +16524,7 @@ a:focus {
 }
 .single-book-box .post-thumbnail {
   display: inline-block;
-  margin: -40px 0 -40px -10px;
+  vertical-align: middle;
 }
 @media (max-width: 767px) {
   .single-book-box .post-thumbnail {
